--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ TP5_Accseso_HW/.DS_Store
 TP5_Accseso_HW/.DS_Store
 TP5_Accseso_HW/x64BareBones/Kernel/.DS_Store
 TP5_Accseso_HW/x64BareBones/Bootloader/.DS_Store
+.DS_Store
